[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
bs4 = "^0.0.1"
dnspython = "^1.16"
openpyxl = "^3.0"
pandas = "^1.0"
pathos = "^0.2.5"
pydnsbl = "^1.0"
python = "^3.8"
ray = "^0.8.5"
virustotal2 = "^1.1"
whitenoise = "^5.0.1"
xlwt = "^1.3"
[tool.poetry.dev-dependencies]
